Semana 6/7 practica y examen

--- a/src/main/resources/static/Home.html
+++ b/src/main/resources/static/Home.html
@@ -31,6 +31,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <li><a href ="Login.html">Login</a></li>
                          <li><a href ="LoginT.html">LoginT</a></li>
                          <li><a href ="AcercaDeNosotros.html">AcercaDeNosotros</a></li>
+                         <li><a href ="AcercaDeNosotros.html">AcercaDeNosotros</a></li>
                     </ul>
                 </nav>   
             </div>
